Some changes PALcolors: Make loading status peachy cream detectDiff: Change to avoid infinite loop of loading mineDocuments: Proper finding of end of details pageConnection: Eliminate last traces of multiple by-tab states. Also switched to old courses. toHTML: add spacing on ends of content divs.

--- a/PALExtension/PALcolors.css
+++ b/PALExtension/PALcolors.css
@@ -8,7 +8,7 @@
 }
 
 /* Pretty much everything */
-div.loadingStatus, th.tabTable, div#sideBar, div#tabBar,
+th.tabTable, div#sideBar, div#tabBar,
 #CourseHeader, #removeMenu, #logoutButton, #casLogoutButton,
 th#removeTabTable, #refreshButton, #liteRefreshButton, #removeMenu li a,
 .documentListLink, .documentFileLink, .documentMemo, ul.sideBarSemesters,
@@ -41,6 +41,9 @@ div#notTabBar {
 }
 .documentDiv {
     border-color:  #FFE1A7;
+}
+div.loadingStatus {
+    color: #FFE1A7;
 }
 
 /* Background Orange */
